# university-db

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.txt
src/: main.cpp
src/DBdataGenerator/: CMakeLists.txt  DBdataGenerator.cpp  DBdataGenerator.hpp  DBdataGenerator_addresses.cpp  DBdataGenerator_departments.cpp  DBdataGenerator_names.cpp
src/DBfileManager/: CMakeLists.txt  DBfileManager.cpp  DBfileManager.hpp
src/Employee/: CMakeLists.txt  Employee.cpp  Employee.hpp
src/Person/: CMakeLists.txt  Person.cpp  Person.hpp
src/PersonRecord/: CMakeLists.txt  PersonRecord.cpp  PersonRecord.hpp
src/PeselValidator/: CMakeLists.txt  I_PeselValidator.hpp  PeselValidator.cpp  PeselValidator.hpp
src/Student/: CMakeLists.txt  Student.cpp  Student.hpp
src/StudentRecord/: CMakeLists.txt  StudentRecord.cpp  StudentRecord.hpp
src/UniversityDB/: CMakeLists.txt  UniversityDB.cpp  UniversityDB.hpp
test-resources/: File-reading-template.txt
tests/: CMakeLists.txt  PeselValidatorTests.cpp  StudentRecordTests.cpp  StudentTests.cpp
tests/DBdataGeneratorTests/: CMakeLists.txt  DBdataGenearotor-UT.cpp  DBdataGenerator-UT.cpp
tests/DBfileManagerTests/: CMakeLists.txt  DBfileManager-UT.cpp
tests/EmployeeTests/: CMakeLists.txt  Employee-UT.cpp
tests/PersonTests/: CMakeLists.txt  Person-UT.cpp
tests/PeselValidatorTests/: CMakeLists.txt  PeselValidator-UT.cpp
tests/StudentRecordTests/: CMakeLists.txt  StudentRecord-UT.cpp
tests/StudentTests/: CMakeLists.txt  Student-UT.cpp
tests/UniversityDBTests/: CMakeLists.txt  UniversityDB-MT.cpp  UniversityDB-UT.cpp  UniversityDB-mt.cpp  UniversityDB-ut.cpp
tests/mocks/: PersonMock.hpp  PeselValidatorMock.hpp
